updating index. fixed print message. working to make cleaner code/more classes
Signed-off-by: macabrera9 <mcabrera2@luc.edu>

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ function testTweet(){
     document.getElementById("length").innerHTML = tweetLength;
   }
 }
+function tweetLengthTest(){
+
+}
 $(document).ready(function(){
     tx = $('#tfield1')
     tx.height(tx.prop('scrollHeight'));
