--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <title>My Example</title>
 <body>
   <header><h1 align="center">Valid Tweet-Checker</h1> </header>
@@ -7,9 +10,14 @@ Field1: <input type ="text" id="field1"><br>
 <button onclick="testTweet()"type="button">Test tweet</button>
 <p id="validity">Test the validity of a tweet!</p>
 <p id="length">This is the length of the tweet</p>
+<p id="mentions">This is the number of mentions</p>
+<p id="urls">This is the number of urls</p>
+<p id="topics">This is the number of topics</p>
 <script>
+
+
 function testTweet(){
-  var txt = document.getElementById("field1");
+  var tweet = new Object(), txt = document.getElementById("field1"), urls =[], mentions = [], topics =[];
   var tweetLength = txt.value.length;
   var valid = false;
   if (tweetLength > 280){
@@ -20,9 +28,6 @@ function testTweet(){
     document.getElementById("validity").innerHTML = "This is a valid tweet";
     document.getElementById("length").innerHTML = tweetLength;
   }
-}
-function tweetLengthTest(){
-
 }
 $(document).ready(function(){
     tx = $('#tfield1')
