initial trial of regex for unit testing
Signed-off-by: Linette V Maliakal <lmaliakal21@gmail.com>

--- a/tstesting.html
+++ b/tstesting.html
@@ -3,5 +3,6 @@
     <head><title>TypeScript Test - Greet</title></head>
     <body>
         <script src="tstesting.js"></script>
+        <p id ="test1"></p>
     </body>
 </html>
