--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <title>My Example</title>
 <body>
-  <header><h1 align="center">Valid Tweet-Checker</h1> </header>
-Field1: <input type ="text" id="field1"><br><br>
+<header><h1 align="center">Valid Tweet-Checker</h1> </header>
+Enter your tweet here! <input type ="textarea" id="field1"><br><br>
 <button onclick="testTweet()"type="button">Test tweet</button>
 <p id="validity">Test the validity of a tweet!</p>
 <p id="length">This is the length of the tweet</p>
