--- a/tscheck.html
+++ b/tscheck.html
@@ -2,7 +2,7 @@
 <html>
     <head><title>TypeScript Test - Greet</title></head>
     <body>
-        <script src="tstesting.js"></script>
+        <script src="tscheck.js"></script>
         <p id ="test1"></p>
     </body>
 </html>
