implementing background image
Signed-off-by: macabrera9 <mcabrera2@luc.edu>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <script src = "TweetTest.js"></script>
 </head>
 <title>My Example</title>
-<body>
+<body background="twitterB.png">
 <header><h1 align="center">Valid Tweet-Checker</h1> </header>
-Enter your tweet here! <input type ="textarea" id="field1"><br><br>
+Enter your tweet here! <input type ="textarea" rows = "5" cols = "10" id="field1"><br><br>
 <button onclick="testTweet()"type="button">Test tweet</button>
 <p id="validity">Test the validity of a tweet!</p>
 <p id="length">This is the length of the tweet</p>
