fixed if-else statements.
Signed-off-by: macabrera9 <mcabrera2@luc.edu>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src = "TweetTest.js"></script>
 </head>
-<title>My Example</title>
+<title>Tweet Tester</title>
 <body background="twitterB.png">
 <header><h1 align="center">Valid Tweet-Checker</h1> </header>
 Enter your tweet here! <input type ="textarea" rows = "5" cols = "10" id="field1"><br><br>
