--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header><h1 align="center">Valid Tweet-Checker</h1> </header>
     Field1: <input type ="text" id="field1"><br><br>
-    <button onclick="testTweet()"type="button">Test tweet</button>
+    <button onclick="tLength()"type="button">Test tweet</button>
     <p id="validity">Test the validity of a tweet!</p>
     <p id="length">Length of tweet</p>
     <p id="mentions">Number of mentions</p>
