separated tests for counting character limit, included all possible cases
Signed-off-by: Linette V Maliakal <lmaliakal21@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header><h1 align="center">Valid Tweet-Checker</h1> </header>
     Field1: <input type ="text" id="field1"><br><br>
-    <button onclick="tLength()"type="button">Test tweet</button>
+    <button onclick="getTweet()"type="button">Test tweet</button>
     <p id="validity">Test the validity of a tweet!</p>
     <p id="length">Length of tweet</p>
     <p id="mentions">Number of mentions</p>
