moved Jasmine testing files into folders
Signed-off-by: Linette V Maliakal <lmaliakal21@gmail.com>

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <p id="numStrings">Number of strings</p>
   </body>
 
-  <script src="tweetPermissions.js"></script>
-  <script src="tweetPermissionsSpec.js"></script>
+  <script src="lib/tweetPermissions.js"></script>
+  <script src="spec/tweetPermissionsSpec.js"></script>
 </html>
