--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header><h1 align="center">Valid Tweet-Checker</h1> </header>
-    Field1: <input type ="text" id="field1"><br><br>
+    Enter your tweet here! <input type ="text" id="field1"><br><br>
     <button onclick="getTweet()"type="button">Test tweet</button>
     <p id="validity">Test the validity of a tweet!</p>
     <p id="length">Length of tweet</p>
